update in index file

--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,6 @@
     <title>Hello Navneet</title>
 </head>
 <body>
-    <h1>  Navneet Kaushal  </h1>
+    <h1>  Navneet Kaushal WebDev  </h1>
 </body>
 </html>
